--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,6 +1,11 @@
 name: E2E Tests
 on:
   workflow_dispatch:
+    inputs:
+      browser:
+        description: 'Escolha o Navegador (chromium, fifefox, webkit)'
+        required: true
+        default: 'chromium'
   
 jobs:
   test:
@@ -10,7 +15,7 @@ jobs:
     - name: Chekout Code
       uses: actions/checkout@v5
     
-    - name: Set uo Node
+    - name: Set up Node
       uses: actions/setup-node@v4
       with: 
         node-version: 22
@@ -41,11 +46,11 @@ jobs:
       run: npx wait-on http://localhost:3000 --timeout=60000
 
     - name: Run E2E Tests
-      run: robot -d ./logs robot/tests
+      run: robot -d ./logs -v BROWSER:${{ github.event.inputs.browser }} robot/tests
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: robot-results-chromium
+        name: robot-results-${{ github.event.inputs.browser }}
         path: logs/
